--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-auth": "^3.2.1",
-    "remix-auth-supabase": "^3.1.0"
+    "remix-auth-supabase": "^3.1.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.9.0",
