--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "isbot": "^3.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-string-replace": "^1.1.0",
     "remix-auth": "^3.2.1",
     "remix-auth-supabase": "^3.1.0",
     "yup": "^0.32.11"
